--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width-device-width" />
 	<meta charset="UTF-8" />
 </head>
-<body>
+<body class="container">
 	<div ng-view></div>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script>
